Update Douyin link text in index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <h1 style="margin-top:24px;">短视频</h1>
   <ul>
-    <li><a href="https://v.douyin.com/--c09Fi-tZA/" target="_blank">抖音链接（你提供的原始地址格式不完整，如需我可整理为可直接跳转）</a></li>
+    <li><a href="https://v.douyin.com/--c09Fi-tZA/" target="_blank">《中秋古画漫游 千里共婵娟》</a></li>
   </ul>
 
   <div class="note">
