Simplify note content in index.html
Removed unnecessary text from the note section.

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
   </ul>
 
   <div class="note">
-    扫码后即可查看合集。微博为外链，可能根据设备提示打开浏览器或微博App。<br>
-    若你需要封面封装、标题整理、更美观排版，我可以进一步优化样式。
+    扫码后即可查看。微博为外链，可能根据设备提示打开浏览器或微博App。<br>
   </div>
 </div>
 </body>
