--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>微博与视频合集</title>
+  <title>浙江大学融媒体中心年度案例</title>
   <style>
     body{font-family:-apple-system,BlinkMacSystemFont,"Helvetica Neue","PingFang SC","Hiragino Sans GB","Microsoft YaHei",Arial;margin:0;padding:20px;background:#f7f7f8;}
     .container{max-width:640px;margin:0 auto;background:#fff;padding:18px 20px;border-radius:10px;box-shadow:0 4px 12px rgba(0,0,0,0.06);}
@@ -17,7 +17,7 @@
 
 <body>
 <div class="container">
-  <h1>微博合集链接</h1>
+  <h1>微博合集</h1>
   <ul>
     <li><a href="https://weibo.com/2803301701/5151980646040316?wm=3333_2001&from=10FB193010&sourcetype=weixin&rp_trans=dFZVU0RJSXZ0STdVaTI1REdtSVF3d29wZS9LUFZyK1pLRnhmOGt1ZFNpU1FvUng5WUQrWWIrR290RTUzNWdzWWR2dDBHcGZMQzdZb09MU3lKM1VEYmYrb1NqZFFYWDhKMWJnOXNXdFFVZ1IxU1BFNU91ci" target="_blank">《仇英版〈清明上河图〉》</a></li>
     <li><a href="https://weibo.com/2656274875/5161423017612915?wm=3333_2001&from=10FB193010&sourcetype=weixin&rp_trans=dFZVU0RJSXZ0STdVaTI1REdtSVF3d29wZS9LUFZyK1pLRnhmOGt1ZFNpUWpzWUxWZE1ISzhNVjRqZ25WWmRrMTM0a3FwVENUekxhdGpmNEtkUUptUzQrQ1QxLytXbnBTMkZLcXVPSE1ONngxU1BFNU91ci" target="_blank">《姑苏繁华图》</a></li>
@@ -26,7 +26,7 @@
     <li><a href="https://weibo.com/2803301701/5150656991068704?wm=3333_2001&from=10FB193010&sourcetype=weixin&rp_trans=dFZVU0RJSXZ0STdVaTI1REdtSVF3d29wZS9LUFZyK1pLRnhmOGt1ZFNpU293N0hoQkt5cjNJNk93OERmWmU0VlpZc0xwY2o4WjYybzQralY5SFVIUzJ2Y0FrYTRrWUwraUZPWXhrVW8wbmwxU1BFNU91ci" target="_blank">《大唐五牛看春耕》</a></li>
   </ul>
 
-  <h1 style="margin-top:24px;">短视频</h1>
+  <h1 style="margin-top:24px;">抖音短视频</h1>
   <ul>
     <li><a href="https://v.douyin.com/--c09Fi-tZA/" target="_blank">《中秋古画漫游 千里共婵娟》</a></li>
   </ul>
